Move to GraalVM 22.3.0, JDK 19